--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         body { 
             font-family: Pretendard, sans-serif; 
             margin: 0; overflow: hidden; 
-            background: #0f0c29;  /* fallback */
+            background: #0f0c29;
             background: linear-gradient(to bottom, #24243e, #302b63, #0f0c29); 
             color: white; 
             -webkit-tap-highlight-color: transparent;
         }
 
-        /* 화려한 배경 애니메이션 (오로라 효과) */
+        /* 오로라 배경 애니메이션 */
         .aurora-bg {
             position: absolute; inset: 0; z-index: 0;
             background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
@@ -32,13 +32,9 @@
             100% { background-position: 0% 50%; }
         }
 
-        /* 3D 컨테이너 */
-        .perspective-container {
-            perspective: 1000px;
-            transform-style: preserve-3d;
-        }
+        /* 3D 컨테이너 및 패널 */
+        .perspective-container { perspective: 1000px; transform-style: preserve-3d; }
 
-        /* 3D 글래스 박스 (메인 패널) */
         .glass-panel {
             background: rgba(255, 255, 255, 0.15);
             backdrop-filter: blur(20px);
@@ -53,7 +49,7 @@
             will-change: transform;
         }
 
-        /* 앱 아이콘 3D 스타일 */
+        /* 앱 아이콘 스타일 */
         .app-btn {
             position: relative;
             display: flex; flex-direction: column; align-items: center;
@@ -69,20 +65,15 @@
             font-size: 32px; color: white;
             box-shadow: 0 8px 20px rgba(0,0,0,0.2);
             transition: all 0.3s;
-            position: relative;
-            overflow: hidden;
+            position: relative; overflow: hidden;
             border: 1px solid rgba(255,255,255,0.2);
         }
-        /* 아이콘 광택 효과 */
         .icon-box::after {
             content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
             background: linear-gradient(135deg, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0) 50%);
         }
 
-        /* 텍스트 그림자 */
         .text-shadow { text-shadow: 0 2px 10px rgba(0,0,0,0.3); }
-        
-        /* 둥둥 떠다니는 애니메이션 */
         .float-anim { animation: float 6s ease-in-out infinite; }
         @keyframes float {
             0% { transform: translateY(0px); }
@@ -159,6 +150,13 @@
                     <span class="text-sm mt-3 font-bold text-white/90">네온오목</span>
                 </a>
 
+                <a href="hockey.html" class="app-btn group col-span-2">
+                    <div class="icon-box bg-gradient-to-br from-blue-400 to-indigo-600 w-full" style="width: 250px;">
+                        <i class="fa-solid fa-hockey-puck"></i>
+                        <span class="ml-3 text-xl font-bold">네온 하키</span>
+                    </div>
+                </a>
+
             </div>
         </div>
 
@@ -187,5 +185,4 @@
         });
     </script>
 </body>
-
 </html>
